[gd_scene load_steps=14 format=2]

[ext_resource path="res://levels/terrain.png" type="Texture" id=1]
[ext_resource path="res://levels/towers_walls_grass_light_2.png" type="Texture" id=2]
[ext_resource path="res://levels/free_build_place_holder.png" type="Texture" id=3]
[ext_resource path="res://levels/Level.gd" type="Script" id=4]
[ext_resource path="res://levels/Wave_spawner.gd" type="Script" id=5]
[ext_resource path="res://debug_theme.tres" type="Theme" id=6]
[ext_resource path="res://levels/ui/Icon25.png" type="Texture" id=7]
[ext_resource path="res://levels/ui/Icon78.png" type="Texture" id=8]
[ext_resource path="res://levels/ui/Number10.png" type="Texture" id=9]
[ext_resource path="res://levels/ui/Number02.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "terrain.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 256, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "terrain.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 128, 256, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "terrain.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 256, 256, 128, 128 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "terrain.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 256, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "terrain.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 512, 256, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "terrain.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 640, 256, 128, 128 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "terrain.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 768, 256, 128, 128 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "towers_walls_grass_light_2.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 128, 512, 128, 128 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "towers_walls_grass_light_2.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 256, 512, 128, 128 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "towers_walls_grass_light_2.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 384, 512, 128, 128 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -209.066, 1146.64, 0, 0, 0, 0, 259.264, 1146.74, -33.1355, 46.423, 33.1355, -46.423, 363.168, 1106.55, 0, 0, 0, 0, 390.035, 1023.67, 0, 0, 0, 0, 390.057, 760.188, -27.6644, 30.8412, 27.6644, -30.8412, 417.223, 660.468, 0, 0, 0, 0, 515.406, 627.548, 0, 0, 0, 0, 1015.1, 628.363, -35.0962, -35.7312, 35.0962, 35.7312, 1120.34, 659.062, 0, 0, 0, 0, 1150.47, 750.787, 0, 0, 0, 0, 1151.44, 1035.2, -33.7623, -27.3005, 33.7623, 27.3005, 1179.42, 1123.45, 0, 0, 0, 0, 1275.69, 1149.19, 0, 0, 0, 0, 2034.92, 1148.99, -34.919, 37.1334, 34.919, -37.1334, 2142.37, 1117.48, 0, 0, 0, 0, 2173.49, 1032.18, 0, 0, 0, 0, 2173.3, 747.391, -30.2998, 38.5684, 30.2998, -38.5684, 2202.21, 664.806, 0, 0, 0, 0, 2313.36, 629.205, 0, 0, 0, 0, 2783.93, 629.205 )
}

[sub_resource type="TileSet" id=3]
0/name = "free_build_place_holder.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="Level_01" type="Node2D"]
script = ExtResource( 4 )

[node name="Wave_spawner" type="Node2D" parent="."]
script = ExtResource( 5 )
enemies_in_level = 15

[node name="Spawn_timer" type="Timer" parent="Wave_spawner"]
wait_time = 5.0
one_shot = true

[node name="Ground_tile" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, 65535, 0, 0, 0, 1610612738, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 131071, 0, 0, 65536, 1, 0, 65537, 0, 0, 65538, 0, 0, 65539, 2, 0, 65540, 2, 0, 65541, 0, 0, 65542, 2, 0, 65543, 2, 0, 65544, 2, 0, 65545, 2, 0, 65546, 2, 0, 196607, 0, 0, 131072, 0, 0, 131073, 4, 0, 131074, -1610612733, 0, 131075, -1610612733, 0, 131076, -1610612732, 0, 131077, 0, 0, 131078, 0, 0, 131079, 1610612737, 0, 131080, 4, 0, 131081, -1610612733, 0, 131082, -1610612733, 0, 262143, 0, 0, 196608, 2, 0, 196609, 1610612739, 0, 196610, 1610612737, 0, 196611, 1610612736, 0, 196612, 1610612739, 0, 196613, 1610612738, 0, 196614, 1610612736, 0, 196615, 1610612737, 0, 196616, 1610612739, 0, 196617, 2, 0, 196618, 2, 0, 327679, -1073741821, 0, 262144, -1073741821, 0, 262145, 1610612740, 0, 262146, 1610612738, 0, 262147, 0, 0, 262148, -1073741820, 0, 262149, -1073741821, 0, 262150, -1073741821, 0, 262151, -1610612733, 0, 262152, 1610612740, 0, 262153, 0, 0, 262154, 0, 0, 393215, 0, 0, 327680, 2, 0, 327681, 1610612737, 0, 327682, 1610612738, 0, 327683, 1610612738, 0, 327684, 0, 0, 327685, 1, 0, 327686, 1610612738, 0, 327687, 0, 0, 327688, 1610612737, 0, 327689, 2, 0, 327690, 0, 0 )

[node name="Enemy_path" type="Path2D" parent="."]
position = Vector2( -0.752121, 6.43951 )
scale = Vector2( 0.500463, 0.497549 )
curve = SubResource( 2 )

[node name="Build_zone" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 3 )
cell_size = Vector2( 128, 128 )
centered_textures = true
format = 1
tile_data = PoolIntArray( 65538, 1610612736, 0, 131077, 1610612736, 0, 131079, 1610612736, 0, 196610, 1610612736, 0, 196611, 1610612736, 0, 196614, 1610612736, 0 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
visible = false
margin_left = 40.0
margin_top = 10.0
margin_right = 1240.0
margin_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Label" type="Label" parent="UI/HBoxContainer"]
margin_left = 517.0
margin_top = 13.0
margin_right = 552.0
margin_bottom = 27.0
text = "Score"

[node name="Build_mode_button" type="Button" parent="UI/HBoxContainer"]
margin_left = 556.0
margin_right = 644.0
margin_bottom = 40.0
text = "Build_mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit_button" type="Button" parent="UI/HBoxContainer"]
margin_left = 648.0
margin_right = 683.0
margin_bottom = 40.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CR" type="ColorRect" parent="UI"]
margin_left = 90.0
margin_top = 20.0
margin_right = 1190.0
margin_bottom = 100.0
color = Color( 0.101961, 0.266667, 0.0627451, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waves_label" type="Label" parent="UI/CR"]
margin_left = 700.0
margin_top = 24.0
margin_right = 771.0
margin_bottom = 53.0
theme = ExtResource( 6 )
text = "Waves"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build_mode_t" type="TouchScreenButton" parent="UI/CR"]
position = Vector2( 300, 0 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 7 )

[node name="Exit_button_t" type="TouchScreenButton" parent="UI/CR"]
position = Vector2( 1000, 0 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 8 )

[node name="CR_build_menu" type="ColorRect" parent="UI"]
visible = false
margin_left = 340.268
margin_top = 18.5908
margin_right = 884.268
margin_bottom = 98.5908
color = Color( 0.101961, 0.266667, 0.0627451, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IT_build" type="TouchScreenButton" parent="UI/CR_build_menu"]
position = Vector2( 5.6123, 3.36737 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 9 )

[node name="PL_build" type="TouchScreenButton" parent="UI/CR_build_menu"]
position = Vector2( 94.2868, 2.24493 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 10 )

[node name="Cancel_build" type="TouchScreenButton" parent="UI/CR_build_menu"]
position = Vector2( 461.332, 4.48984 )
scale = Vector2( 0.8, 0.8 )
normal = ExtResource( 8 )

[connection signal="timeout" from="Wave_spawner/Spawn_timer" to="Wave_spawner" method="_on_Spawn_timer_timeout"]
[connection signal="pressed" from="UI/HBoxContainer/Build_mode_button" to="." method="_on_Build_mode_button_pressed"]
[connection signal="pressed" from="UI/CR/Build_mode_t" to="." method="_on_Build_mode_button_pressed"]
[connection signal="pressed" from="UI/CR/Exit_button_t" to="." method="_on_Exit_button_t_pressed"]
[connection signal="pressed" from="UI/CR_build_menu/IT_build" to="." method="_on_IT_build_pressed"]
[connection signal="pressed" from="UI/CR_build_menu/PL_build" to="." method="_on_PL_build_pressed"]
[connection signal="pressed" from="UI/CR_build_menu/Cancel_build" to="." method="_on_Build_mode_button_pressed"]
